--- a/index.css
+++ b/index.css
@@ -1,68 +1,32 @@
-* {
-  border: border-box;
-}
-
-html, body{
-    width: 100;
-    height: 100%;
+*{
+    padding:0;
     margin: 0;
-    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 
-.container{
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #e8f0fb;
+body{
+    height: 100vh;
+    background: linear-gradient(135deg, #8052ec, #d161ff);
 }
 
 form{
-    display: flex;
-    position: relative;
-}
-
-.inputs{
-    margin-left: 10px;
-}
-
-input{
-    border: none;
-}
-
-input{
-    font-size: 16px;
-    padding: 10px 12px;
-}
-
-.departamento ul{
+    width: 75vmin;
+    height: 100%;
     position: absolute;
-    top: 100%;
-    margin-top: -1px;
-    width: 50%;
-    z-index: 1;
-    background: #fff;
-    margin: 0;
-    list-style: none;
-    transition: none;
-    padding: 0;
-    border: 1px solid #e6f0f2;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    padding: 50px 0;
 }
 
-.departamento ul li{
-    padding: 6px 12px;
-    transition: 0.2s background;
-    cursor: pointer;
-}
-
-.departamento ul li:hover{
-    background: #e6f0f2;
-}
-
-.departamento ul li + li {
-    border-top: 1px solid #bfc8c9;
-}
-
-.hidden{
-    display: none;
+input{
+    width: 100%;
+    padding: 15px 10px;
+    border: none;
+    border-bottom: 1px solid #645979;
+    outline: none;
+    border-radius: 5px 5px 0 0;
+    background-color: #ffffff;
+    font-size: 16px;
 }
