--- a/index.css
+++ b/index.css
@@ -30,3 +30,21 @@ input{
     background-color: #ffffff;
     font-size: 16px;
 }
+
+ul{
+    list-style: none;
+}
+
+.list{
+    width: 100%;
+    background-color: #ffffff;
+    border-radius: 0 0 5px 5px;
+}
+
+.list-items{
+    padding: 10px 5px;
+}
+
+.list-items:hover{
+    background-color: #dddddd;
+}
